06-09-2012 Michael Klapper  <michael.klapper@morphodo.com>
	* Add flash message as notice to inform the user if the "hide in list" option is toggled.
	* Manual update the "hide in list" option is now possible if "kind of" is not changed at the same time.
	* Improve ORDER BY in all listings of be_groups records.
	* Restore original multiselect box for be_groups of "default all".
	* Update Wizard should take care of records with the type "default all".

04-09-2012 Michael Klapper  <michael.klapper@morphodo.com>
	* Update subgroup_* fields if you switch from default (tx_begroups_kind = 0)
	  to type META (tx_begroups_kind = 3).

23-08-2012 Michael Klapper  <michael.klapper@morphodo.com>
	* Introduced two wizards to migrate to the new be_groups interface.

05-07-2012 Michael Klapper  <michael.klapper@morphodo.com>
	* Restructure the field subgroup into seven new fields to improve the user experience.

04-07-2012 Michael Klapper  <michael.klapper@morphodo.com>
	* Create new icon added to the be_group record on field subgroup
	* Show only groups of type META in be_user records
	* Hide groups in be_group records if they are of type META
	* Initial release